crates/build/src/ops/snapshots/build__ops__test__ops_catalog_is_generated.snap
---
source: crates/build/src/ops/mod.rs
expression: spec_json

---
{
  "collections": {
    "ops/bar/log": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-log-schema.json"
    },
    "ops/bar/stats": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-stats-schema.json"
    },
    "ops/foo/log": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-log-schema.json"
    },
    "ops/foo/stats": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-stats-schema.json"
    },
    "ops/wut/log": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-log-schema.json"
    },
    "ops/wut/stats": {
      "key": [
        "/task/name",
        "/task/keyBegin",
        "/task/rClockBegin"
      ],
      "projections": {
        "taskKeyBegin": {
          "location": "/task/keyBegin",
          "partition": true
        },
        "taskName": {
          "location": "/task/name",
          "partition": true
        },
        "taskRClockBegin": {
          "location": "/task/rClockBegin",
          "partition": true
        }
      },
      "schema": "ops-stats-schema.json"
    }
  }
}
