crates/build/src/ops/snapshots/build__ops__test__ops_generated_collections.snap
---
source: crates/build/src/ops/mod.rs
expression: "&tables.collections"

---
[
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        schema: builtin://flow/ops-log-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        schema: builtin://flow/ops-stats-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        schema: builtin://flow/ops-log-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        schema: builtin://flow/ops-stats-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        schema: builtin://flow/ops-log-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        schema: builtin://flow/ops-stats-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        schema: builtin://flow/ops-log-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
    Collection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        schema: builtin://flow/ops-stats-schema.json,
        key: ["/shard/name","/shard/keyBegin","/shard/rClockBegin","/ts"],
        journals: {"fragments":{}},
    },
]
