crates/build/src/ops/snapshots/build__ops__test__ops_generated_projections.snap
---
source: crates/build/src/ops/mod.rs
expression: "&tables.projections"

---
[
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: rangeKeyBegin,
        location: /shard/keyBegin,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: rangeRClockBegin,
        location: /shard/rClockBegin,
        partition: 1,
        user_provided: 1,
    },
]
